--- a/nas-front-end/src/app/module/video/component/play/play.component.html
+++ b/nas-front-end/src/app/module/video/component/play/play.component.html
@@ -1,9 +1,11 @@
 <div>
   <nz-breadcrumb>
     <nz-breadcrumb-item (click)="goFolder('')"><a>Root</a></nz-breadcrumb-item>
-    <nz-breadcrumb-item (click)="goFolder(item.link,last)" *ngFor="let item of breadcrumb; let last = last">
-      <a>{{item.name}}</a>
-    </nz-breadcrumb-item>
+    @for (item of breadcrumb; track item; let last = $last) {
+      <nz-breadcrumb-item (click)="goFolder(item.link,last)">
+        <a>{{item.name}}</a>
+      </nz-breadcrumb-item>
+    }
   </nz-breadcrumb>
   <div #videoPlayerElement></div>
 </div>
