--- a/nas-front-end/src/app/module/video/component/list/list.component.html
+++ b/nas-front-end/src/app/module/video/component/list/list.component.html
@@ -1,28 +1,42 @@
 <div>
   <nz-breadcrumb>
     <nz-breadcrumb-item (click)="goFolder('')"><a>Root</a></nz-breadcrumb-item>
-    <nz-breadcrumb-item (click)="goFolder(item.link)" *ngFor="let item of breadcrumb">
-      <a>{{item.name}}</a>
-    </nz-breadcrumb-item>
+    @for (item of breadcrumb; track item) {
+      <nz-breadcrumb-item (click)="goFolder(item.link)">
+        <a>{{item.name}}</a>
+      </nz-breadcrumb-item>
+    }
   </nz-breadcrumb>
   <nz-table [nzData]="data" [nzShowPagination]="false">
     <thead>
-    <tr>
-      <th>Name</th>
-      <th>Size</th>
-    </tr>
+      <tr>
+        <th>Name</th>
+        <th>Size</th>
+      </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let item of data">
-      <td (click)="go(item)">
-        <i *ngIf="item.file&&!item.canPlay" nz-icon nzType="file" nzTheme="outline"></i>
-        <i *ngIf="item.file&&item.canPlay" nz-icon nzType="video-camera" nzTheme="outline"></i>
-        <i *ngIf="!item.file" nz-icon nzType="folder" nzTheme="outline"></i>
-        <span *ngIf="item.name===''">{{item.location | base64Decoder}}</span>
-        <span *ngIf="item.name!==''">{{item.name}}</span>
-      </td>
-      <td>{{item.size}}</td>
-    </tr>
+      @for (item of data; track item) {
+        <tr>
+          <td (click)="go(item)">
+            @if (item.file&&!item.canPlay) {
+              <i nz-icon nzType="file" nzTheme="outline"></i>
+            }
+            @if (item.file&&item.canPlay) {
+              <i nz-icon nzType="video-camera" nzTheme="outline"></i>
+            }
+            @if (!item.file) {
+              <i nz-icon nzType="folder" nzTheme="outline"></i>
+            }
+            @if (item.name==='') {
+              <span>{{item.location | base64Decoder}}</span>
+            }
+            @if (item.name!=='') {
+              <span>{{item.name}}</span>
+            }
+          </td>
+          <td>{{item.size}}</td>
+        </tr>
+      }
     </tbody>
   </nz-table>
 </div>
